Fix issue where last cloud could cause vertical overflow

--- a/src/scss/gnosis.scss
+++ b/src/scss/gnosis.scss
@@ -10,7 +10,7 @@
         29% 600px, 37% 780px, 45% 770px, 67% 790px, 77% 750px,
         0%;
     position: relative;
-    overflow-x: hidden;
+    overflow: hidden;
 
     .gnosis-cloud {
         display: block;
